0.12/vpc.tf
resource "aws_vpc" "default" {
  cidr_block           = var.aws_vpc_cidr
  enable_dns_hostnames = "true"
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.default.id
}

resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.default.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }
}
